0.99.9.7

* Added WoW Armory extension by gizzmo.
* Events can now be grouped by any value, not just the event key (but still are date-based).
* Installation should now work on installs that do not use MyISAM.
* As of now, Lifestream requires WordPress 2.9 or higher.
* Added initial workings for templates (and true themes).

0.99.9.6

* Added get_option, add_option, update_option, and delete_option methods to Lifestream_Extension.
* Added Codaset extension by jonathan.
* Added `event_ids` argument to Lifestream::get_events(). Note that this behavior depends on the `break_groups` argument.
* Added Foursquare extension by Jonathan Kern.
* Updated SimplePie to 1.2.
* Upon activating the plugin the default feed is now owned by the user performing the activation.
* Added much needed "less suck" to the GitHub extension.
* Added Ustream extension.

0.99.9.5

* Fixed settings panel.
* Added initial Kiva extension by ohnate.com.
* Support for non-permalink paging.

0.99.9.4

* Added `truncate_interval` option. Defaults to off. Used to truncate event history.
* Added the ability to start/stop (pause) a feeds updates.
* URLs should now support linking if they include a dash (-) or a percent sign (%).
* The Twitter extension will now properly link lists.
* Google Reader now supports username URLs.

0.99.9.3

* Some more potential fixes for Windows users and icon packs.
* Added Refined Extended icon pack by Paul Robert LLoyd.
* Fixed an issue with parsing extension files.
* Several validation issues for the RSS feed were fixed.
* Added Lifestream::get_rss_feed_url()
* Added Gowalla extension.
* Fixed Eventful feed.

0.99.9.2

* Fixed some issues with icon and css paths.
* Fixed an issue if you weren't using permalinks where pagination links were invalid.
* Updated and moved GitHub and Reddit into it's their extension file (Thanks Chromakode!).
* Fixed typo with upcoming.yahoo.com.
* Added missing `alt` attributes on images.