@@ -1,5 +1,6 @@
-<h2><?php $lifestream->_e('Lifestream Support Forums'); ?> <small>(<a href="http://www.enthropia.com/labs/forums/index.php#c1" target="_blank"><?php $lifestream->_e('Open in a new window'); ?></a>)</small></h2>
+<h2><?php $lifestream->_e('Lifestream Support'); ?> <small>(<a href="http://www.enthropia.com/labs/forums/index.php#c1" target="_blank"><?php $lifestream->_e('Open in a new window'); ?></a>)</small></h2>
 
 <p><?php $lifestream->_e('You may direct questions, feedback, and problems to us by posting in the forums below.'); ?></p>
+<p><?php $lifestream->_e('If you are certain that your problem is an error in Lifestream, or you have a feature that is a must-have, then please use our <a href="%s">Issue Tracker</a>', 'http://github.com/dcramer/wp-lifestream/issues'); ?></p>
 
 <iframe style="width: 100%; height: 500px;" src="http://www.enthropia.com/labs/forums/index.php#c1"></iframe>
